# ws-playground

./: .gitignore
backend/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
backend/src/: wss.py
frontend/: index.html  package.json
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue
