[tool.poetry]
name = "ws-playground"
version = "0.1.0"
description = ""
authors = ["Tasanai Srisawat <tasanai.srisawat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
